# intership-report-generator

./: .gitignore  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.md
prompts/: plan_summary.yaml  problem_summary.yaml  thoughts_summary.yaml  weekly_summary.yaml
reports/: 주간보고서_2주차_20250811.docx
src/: ai_summarizer.py  client.py  config.py  date_utils.py  exceptions.py  models.py  renderers.py  report_generator.py  weekly_manager.py
tests/: test.ipynb
